# scrapping_api

./: .cursorignore  .dockerignore  .env.example  .gitignore  DOCKER_DEVELOPMENT.md  Dockerfile  Makefile  OUT_OF_SCOPE.md  README.md  alembic.ini  conftest.py  docker-compose.yml  env.example  pyproject.toml  tasks.md  test_tasks.md
alembic/versions/: f883904edd40_initial_migration.py
app/: __init__.py  auth.py  db.py  main.py  settings.py
app/core/: __init__.py  errors.py  headers.py  pagination.py
app/middleware/: __init__.py  request_id.py  request_size.py
app/models/: __init__.py  api_key.py  device_profile.py  mixins.py  template.py  user.py
app/repositories/: __init__.py  device_profile.py  template.py  user.py
app/routers/: __init__.py  device_profiles.py  health.py  templates.py
app/schemas/: __init__.py  device_profile.py  template.py
app/utils/: __init__.py  encryption.py  template_normalization.py
app/validators/: device_profile.py
scripts/: create_user.py  dev.sh  init_db.sql  seed_templates.py
tests/: test_auth.py  test_device_profiles.py  test_template_normalization.py  test_templates.py
