[project]
name = "scrapping-api"
version = "0.1.0"
description = "Scrapping API - ZenRows Technical Challenge"
authors = [
    {name = "Adrian Parisi",email = "adrianparisi87@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi>=0.117.1,<0.118.0",
    "pydantic>=2.0.0,<3.0.0",
    "pydantic-settings>=2.0.0,<3.0.0",
    "sqlalchemy>=2.0.0,<3.0.0",
    "alembic>=1.12.0,<2.0.0",
    "uvicorn>=0.24.0,<1.0.0",
    "python-multipart>=0.0.6,<1.0.0",
    "psycopg2-binary>=2.9.0,<3.0.0",
    "httpx>=0.25.0,<1.0.0",
    "pytest>=7.4.0,<8.0.0",
    "pytest-asyncio>=0.21.0,<1.0.0",
    "fastapi-pagination[sqlalchemy] (>=0.14.1,<0.15.0)",
    "pytest-mock (>=3.15.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
